--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,23 @@ canvas {
     background-color: white;
 }
 
+.controls {
+    display: grid;
+    margin-left: 20px;
+}
+
+button {
+    cursor: pointer;
+    border-radius: 10px;
+    border: 1px solid red;
+    background-color: white;
+    width: 100px;
+    height: 50px;
+    margin: 10px;
+    font-family: Sans-serif;
+    font-size: 20px;
+}
+
+button:hover:enabled {
+    background-color: #ebebeb;
+}
